fixed caption spacing

--- a/app/assets/stylesheets/roams.css.scss
+++ b/app/assets/stylesheets/roams.css.scss
@@ -66,6 +66,11 @@ width:17px;
 line-height:20px;
 }
 
+.caption_contain{
+	width:80%;
+	margin:auto;
+}
+
 .modal-body{
 	height:300px;
 	width:500px;
